--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
     <!-- Dependencies -->
     <script src="https://unpkg.com/react@15/dist/react.js"></script> 
     <script src="https://unpkg.com/react-dom@15/dist/react-dom.js"></script> 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
     <!-- Main -->
     <script src="../bundle.js"></script>
