--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#2196F3">
     <meta charset="UTF-8" />
-    <title>Hello React!</title>
+    <title>Jan Groeneveld</title>
   </head>
   <body>
-    <div id="root"></div>
+    <style>
+      body, html{
+        padding: 0; margin: 0;
+      }
+      #loading{
+        left:50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        position: absolute;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      }
+    </style>
+    <div id="root"><div id="loading"><h2>Loading</h2></div></div>
 
     <!-- Dependencies -->
     <script src="https://unpkg.com/react@15/dist/react.js"></script> 
